--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <title>Barend Erasmus | Resume</title>
 
+  <link rel="shortcut icon" type="image/png" href="img/fav.ico"/>
+
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -23,6 +25,8 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
 
+  <link rel="manifest" href="manifest.json">
+
 </head>
 
 <body id="page-top">
@@ -31,7 +35,8 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Barend Erasmus</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAVqAAAAJDk4NTNjMDc4LTczNTctNDZmMC1iMGEyLWQyOTg3ODFhN2E3Mw.jpg"
+          alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -55,9 +60,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -73,29 +78,13 @@
           <a href="mailto:developersworkspace@gmail.com">developersworkspace@gmail.com</a>
         </div>
         <p class="mb-5">
-          Passionate software engineer with thorough hands-on experience in various aspects of the software engineering process.
+          Passionate Software Engineer with thorough hands-on experience in various aspects of the software engineering process.
           <br />
           <br /> Batch, C, C++, C#, Java, JavaScript, PowerShell, Python, TypeScript, T-SQL, Unix Shell, Visual Basic .NET.
         </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
-            <a href="#">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/developersworkspace/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -103,7 +92,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://github.com/barend-erasmus/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -367,13 +356,20 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Responsive Design
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Web Development
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            Mobile Development
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Testing (Unit, Integration and Functional)
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
@@ -384,15 +380,17 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and
-          novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring
-          chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web
-          development world.</p>
+        <p>
+          Apart from being a Software Engineer, I enjoy the being around the ocean. Some of my outdoor activties are snorkeling, body
+          surfing, freediving and more.
+        </p>
+        <p class="mb-0">
+          When forced indoors, I spend time researching technologies or working on side projects.
+        </p>
       </div>
     </section>
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
       <div class="my-auto">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
@@ -430,7 +428,7 @@
               Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
