--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
             <p>
               Passport is a global market research database providing insight on industries, economies and consumers worldwide, helping
               our clients analyse market context and identify future trends impacting businesses globally.
-
               <a href="http://go.euromonitor.com/passport.html">Read More...</a>
             </p>
           </div>
@@ -129,7 +128,7 @@
             <div class="subheading mb-3">Synapseon</div>
             <p>
               Synapseon is a software company based in Cape Town, South Africa, and Vancouver, BC, Canada. We specialize in the design,
-              development and support of medical and human resources applications for the cruise line industry
+              development and support of medical and human resources applications for the cruise line industry.
               <a href="http://www.synapseon.com/index.html">Read More...</a>
             </p>
           </div>
@@ -381,7 +380,7 @@
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
         <p>
-          Apart from being a Software Engineer, I enjoy the being around the ocean. Some of my outdoor activties are snorkeling, body
+          Apart from being a Software Engineer, I enjoy being around the ocean. Some of my outdoor activties are snorkeling, body
           surfing, freediving and more.
         </p>
         <p class="mb-0">
