--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <p>
               Passport is a global market research database providing insight on industries, economies and consumers worldwide, helping
               our clients analyse market context and identify future trends impacting businesses globally.
-              <a href="http://go.euromonitor.com/passport.html">Read More...</a>
+              <a target="_blank" href="http://go.euromonitor.com/passport.html">Read More...</a>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -129,7 +129,7 @@
             <p>
               Synapseon is a software company based in Cape Town, South Africa, and Vancouver, BC, Canada. We specialize in the design,
               development and support of medical and human resources applications for the cruise line industry.
-              <a href="http://www.synapseon.com/index.html">Read More...</a>
+              <a target="_blank" href="http://www.synapseon.com/index.html">Read More...</a>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -146,7 +146,7 @@
               as an empirical science in South Africa. To achieve this, the SADFM’s researched and developed new generation
               nursing measures on patient outcomes. The measures provide additional standardised data on patient improvement
               or decline.
-              <a href="https://www.sadfm.co.za">Read More...</a>
+              <a target="_blank" href="https://www.sadfm.co.za">Read More...</a>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -162,7 +162,7 @@
               We have built a team of highly skilled individuals, all experts in the field of mobile applications, web applications, service-oriented
               architecture, real-time database systems and Business Intelligence. Our vision is to use our abilities, skill
               and diligence to be the first choice software product development company in South Africa.
-              <a href="http://www.returntrue.co.za/About">Read More...</a>
+              <a target="_blank" href="http://www.returntrue.co.za/About">Read More...</a>
             </p>
           </div>
           <div class="resume-date text-md-right">
