--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Barend Erasmus | Resume</title>
 
-  <link rel="shortcut icon" type="image/png" href="img/fav.ico"/>
+  <link rel="shortcut icon" type="image/png" href="img/fav.ico" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -60,25 +60,25 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li> -->
+        </li>
       </ul>
     </div>
   </nav>
 
   <div class="container-fluid p-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
       <div class="my-auto">
         <h1 class="mb-0">Barend
           <span class="text-primary">Erasmus</span>
         </h1>
         <div class="subheading mb-5">14 Santa Barbara, 63 Blaauwberg Road, Table View, Cape Town, South Africa, 7441
+          <br /> Feel free to contact me
           <a href="mailto:developersworkspace@gmail.com">developersworkspace@gmail.com</a>
         </div>
         <p class="mb-5">
-          Passionate Software Engineer with thorough hands-on experience in various aspects of the software engineering process.
+          Experienced Software Engineer with a demonstrated history of working in the agriculture and medical industry.
           <br />
           <br /> Batch, C, C++, C#, Java, JavaScript, PowerShell, Python, TypeScript, T-SQL, Unix Shell, Visual Basic .NET.
         </p>
@@ -106,7 +106,6 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
       <div class="my-auto">
         <h2 class="mb-5">Experience</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Software Engineer</h3>
@@ -170,13 +169,11 @@
           </div>
         </div>
       </div>
-
     </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
       <div class="my-auto">
         <h2 class="mb-5">Education</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Hoërskool Jan van Riebeeck</h3>
@@ -189,14 +186,12 @@
             <span class="text-primary"> 2010 - 2014</span>
           </div>
         </div>
-
       </div>
     </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
       <div class="my-auto">
         <h2 class="mb-5">Skills</h2>
-
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline list-icons">
           <li class="list-inline-item">
@@ -380,8 +375,8 @@
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
         <p>
-          Apart from being a Software Engineer, I enjoy being around the ocean. Some of my outdoor activties are snorkeling, body
-          surfing, freediving and more.
+          Apart from being a Software Engineer, I enjoy being around the ocean. Some of my outdoor activties are snorkeling, body surfing,
+          freediving and more.
         </p>
         <p class="mb-0">
           When forced indoors, I spend time researching technologies or working on side projects.
@@ -389,45 +384,18 @@
       </div>
     </section>
 
-    <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
       <div class="my-auto">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2
-            <sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1
-              <sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3
-              <sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+            Perfect Presence (2017) at Euromonitor International
+          </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
   </div>
 
