--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/developersworkspace/">
+            <a target="_blank" href="https://www.linkedin.com/in/developersworkspace/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -92,13 +92,21 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/barend-erasmus/">
+            <a target="_blank" href="https://github.com/barend-erasmus/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
+          <li class="list-inline-item">
+              <a target="_blank" href="https://developersworkspace.co.za">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-list-ul fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
         </ul>
       </div>
     </section>
